[package]
name = "veigo-id"
version = "0.1.0"
edition = "2024"
description = "A thread-safe, configurable 128-bit unique ID generator for distributed systems, inspired by Twitter's Snowflake."
license = "MIT"
readme = "README.md"

[lib]
path = "source/lib.rs"

[dependencies]
chrono = "0.4.42"
thiserror = "2.0.16"
